force-app/main/default/objects/User_Weekly_Capacity__c/User_Weekly_Capacity__c.object-meta.xml
<CustomObject>
    <label>User Weekly Capacity</label>
    <nameField>
        <displayFormat>UWC-{000}</displayFormat>
        <label>User Weekly Capacity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Weekly Capacities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>