force-app/main/default/objects/User_Weekly_Capacity__c/fields/Actual_Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Scheduled_Hours__c</fullName>
    <label>Actual Scheduled Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>