force-app/main/default/objects/User_Weekly_Capacity__c/fields/Capacity_Used__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Used__c</fullName>
    <formula>IF(Desired_Weekly_Hours__c &gt; 0, 
      Actual_Scheduled_Hours__c / Desired_Weekly_Hours__c, 
      0)</formula>
    <label>Capacity Used %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>