force-app/main/default/objects/User_Weekly_Capacity__c/fields/Capacity_Week__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Week__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capacity Week</label>
    <referenceTo>Capacity_Week__c</referenceTo>
    <relationshipLabel>User Weekly Capacities</relationshipLabel>
    <relationshipName>User_Weekly_Capacities</relationshipName>
    <type>Lookup</type>
</CustomField>