force-app/main/default/objects/User_Weekly_Capacity__c/fields/Desired_Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Desired_Weekly_Hours__c</fullName>
    <label>Desired Weekly Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>