force-app/main/default/objects/User_Weekly_Capacity__c/fields/User_Weekly__c.field-meta.xml
<CustomField>
    <fullName>User_Weekly__c</fullName>
    <label>User Weekly Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>