force-app/main/default/objects/User_Weekly_Capacity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Capacity_Week__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Location__c</columns>
    <columns>Capacity_Used__c</columns>
    <columns>Desired_Weekly_Hours__c</columns>
    <columns>Actual_Scheduled_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>